# opencl-advent

./: CMakeLists.txt  CMakePresets.json  conanfile.py
app/: CMakeLists.txt  main.cpp
include/advent/: advent.hpp
include/cl/: context.hpp
src/: CMakeLists.txt  advent_01.cpp  advent_02.cpp  main.cpp
src/advent/: CMakeLists.txt  advent_01.cpp  cl_context.cpp
src/advent/cl/: CMakeLists.txt  advent_01.cl  device.cl
src/cl/: advent_01.cl  device.cl
test/advent/: CMakeLists.txt  main.cpp  test_advent_01.cpp
